syntax = "proto3";
package user;

// service definition

service UserService {
  rpc listUsers(Empty) returns (UserList) {}
  rpc createUser(NewUser) returns (User) {}
  rpc updateUser(UpdateUser) returns (User) {}
  rpc deleteUser(UserId) returns (result) {}
}

// message type definitions

message Empty {}

message UserList {
  repeated User users = 1;
}

message UserId {
  string id = 1;
}

message User {
  string email = 1;
  string password = 2;
  string updatedAt =3;
  string createdAt =4;
  string _id = 5;
}


message UpdateUser {
  string email = 1;
  string password = 2;
  string _id = 3;
}

message NewUser {
  string email = 1;
  string password = 2;
}

message result {
  string status = 1;
}
